--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "@testing-library/react": "16.3.0",
     "@types/jest": "30.0.0",
     "@types/node": "20.19.11",
-    "@types/node-telegram-bot-api": "^0.64.10",
     "@types/react": "19.1.11",
     "@types/react-dom": "19.1.8",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -66,16 +65,17 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "0.60.0",
+    "@grammyjs/types": "^3.22.1",
     "@modelcontextprotocol/sdk": "1.17.4",
     "@playwright/mcp": "0.0.35",
     "array.prototype.findindex": "^2.2.4",
     "chalk": "5.6.0",
     "cheerio": "1.1.2",
     "commander": "11.1.0",
+    "grammy": "^1.38.1",
     "ink": "4.4.1",
     "ink-spinner": "5.0.0",
     "ink-text-input": "5.0.1",
-    "node-telegram-bot-api": "^0.66.0",
     "openai": "4.104.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -92,5 +92,10 @@
       "optional": true
     }
   },
-  "preferUnplugged": true
+  "preferUnplugged": true,
+  "overrides": {
+    "form-data": "^4.0.0",
+    "tough-cookie": "^4.1.3",
+    "request": "^2.88.2"
+  }
 }
