Security: Replace vulnerable indent-string and shell-quote with custom implementations
- Remove Socket.dev overrides and CLI dependency
- Add custom secure implementations for indent-string and shell-quote
- Create postinstall script to automatically patch vulnerable dependencies
- Update TypeScript path mapping for custom implementations
- Ensure no external security vulnerabilities in core dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,11 @@
     "noPropertyAccessFromIndexSignature": false,
     "noUncheckedIndexedAccess": false,
     "jsx": "react-jsx",
-    "lib": ["ES2022", "DOM"]
+    "lib": ["ES2022", "DOM"],
+    "paths": {
+      "indent-string": ["./src/utils/indent-string"],
+      "shell-quote": ["./src/utils/shell-quote"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
